--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,8 @@ services:
     name: mysurvey_project
     runtime: python
     buildCommand: "./build.sh"
-    startCommand: "gunicorn mysurvey_project.asgi:application -k uvicorn.workers.UvicornWorker"    envVars:
+    startCommand: "gunicorn mysurvey_project.asgi:application -k uvicorn.workers.UvicornWorker"
+    envVars:
       - key: DATABASE_URL
         fromDatabase:
           name: mysurveydb
